# DatabaseAgent

./: .env  Dockerfile  README.md  docker-compose.yaml  interactive_console.py  main.py  pyproject.toml
agent/: database_agent.py  helper.py  schema_extractor.py
agent/nodes/: data_validation.py  intent_analyzer.py  operation_classifier.py  sql_executor.py  sql_generator.py
alembic/: env.py
alembic/versions/: 27ba8e9ec93c_created_user_table.py  4a9e82059c8d_created_order_table.py  52b35c7e9ac3_created_order_item_table.py  d5924a41fb41_created_product_table.py  ed2965e38478_initial_revision.py
database/: config.py  connection.py  docker-compose.yaml  seed.py
database/models/: order.py  order_item.py  product.py  user.py
